# legalbert

./: .gitignore  LegalBERT.ipynb  Makefile  README.md  data.py  dataset.py  embed.py  finetune.py  pyproject.toml
fine_tuned_bert_model/: config.json
