[tool.poetry]
name = "legalbert"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.2"
joblib = "^1.3.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
nltk = "^3.8.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
scrapy = "^2.11.0"
seaborn = "^0.12.2"
spacy = "^3.6.1"
tqdm = "^4.66.1"
transformers = "^4.33.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
